src/test/ui/feature-gates/feature-gate-transparent_unions.stderr
error[E0658]: transparent unions are unstable
  --> $DIR/feature-gate-transparent_unions.rs:2:1
   |
LL | union OkButUnstableUnion {
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #60405 <https://github.com/rust-lang/rust/issues/60405> for more information
   = help: add `#![feature(transparent_unions)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
